# DjangoGoat

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
infra/container/: dev.Dockerfile  prod.Dockerfile
src/core/: settings.py  urls.py
src/labs/xss/: apps.py  models.py  urls.py  views.py
src/labs/xss/migrations/: 0001_initial.py
src/static/js/: xss_common.js
src/templates/: base.html  footer.html  header.html
src/templates/labs/xss/: ajax_json.html  attribute.html  content_type.html  dashboard.html  dom_basic.html  file_upload_xss.html  filter_bypass.html  form_input.html  js_context.html  markdown_xss.html  reflected_basic.html  stored_basic.html  svg_xss.html  url_parameter.html  websocket_xss.html  xss_lab_base.html
src/templates/labs/xss/includes/: hints_section.html  lab_description.html  lab_header.html  success_banner.html
src/templates/whoami/: guide.html  index.html  labs.html
src/whoami/: apps.py  urls.py  views.py
